--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-		"watson/active": "^2.0",
-        "spatie/laravel-medialibrary": "^7.0.0"
+        "pusher/pusher-php-server": "^3.2",
+        "spatie/laravel-medialibrary": "^7.0.0",
+        "watson/active": "^2.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
